--- a/KF.WPF.Client/Modules/Stock/Views/StockView.xaml
+++ b/KF.WPF.Client/Modules/Stock/Views/StockView.xaml
@@ -1,10 +1,15 @@
 ﻿<UserControl x:Class="KF.WPF.Client.Modules.Stock.Views.StockView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"         
+             xmlns:local="clr-namespace:KF.WPF.Client.Modules.Stock.Views"
              prism:ViewModelLocator.AutoWireViewModel="True"
              Background="Transparent">
 
+    <UserControl.Resources>
+        <CollectionViewSource x:Key="ItemsCVS" Source="{Binding Products}" />
+    </UserControl.Resources>
+    
     <Grid>
 
             <Border CornerRadius="10 0 0 10">
@@ -162,10 +167,25 @@
                           ItemsSource="{Binding Stocks}" 
                           SelectedItem="{Binding SelectedStock}" 
                           LoadingRow="DataGrid_LoadingRow">
-                        
-                        <DataGrid.Columns>
 
-                        <DataGridTextColumn Header="Product Name" Binding="{Binding ProductName}" Width="250">
+                    <DataGrid.Columns>
+
+                        <DataGridComboBoxColumn Header="Product Name"  
+                                                DisplayMemberPath="Name"
+                                                SelectedValuePath="ProductId"
+                                                SelectedValueBinding="{Binding ProductId}" 
+                                                ItemsSource="{Binding Source={StaticResource ItemsCVS}}">
+                            
+                            <DataGridComboBoxColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="FrameworkElement.HorizontalAlignment" Value="Center"/>
+                                    <Setter Property="FrameworkElement.Width" Value="250"/>
+                                </Style>
+                            </DataGridComboBoxColumn.CellStyle>
+
+                        </DataGridComboBoxColumn>
+
+                        <!--<DataGridTextColumn Header="Product Name" Binding="{Binding ProductName}" Width="250">
                                 <DataGridTextColumn.ElementStyle>
                                     <Style>
                                         <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
@@ -173,7 +193,7 @@
                                         <Setter Property="TextBlock.MinHeight" Value="30"/>
                                     </Style>
                                 </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
+                        </DataGridTextColumn>-->
 
                         <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="250">
                                 <DataGridTextColumn.ElementStyle>
